--- a/404.html
+++ b/404.html
@@ -4,6 +4,13 @@ title: "404"
 permalink: /404
 comments: false
 ---
+
+<style>
+    pre {
+          background: none;
+          border: none;
+    }
+  </style>
 <pre>
 
                        444444444       000000000            444444444   
